BlockExpression with paramteres and local variables
SqueakObject.st for parser tests
Fluent Message
CollectionExpression 
ModelParser parse #(...) collections

2011-10-02
CollectionExpression renamed to ArrayExpression
DynamicArrayExpression and support for { ... } in ModelParser with tests
Removing CompositeExpression
ModelParser refactor to support nested expressions
MessageExpression.AsString taking precedence into account
Completing Javascript Compiler Visit methods
Fixed Primitive parse as separate expression
AjTalk.Compiler compiling Squeak Object.st to Program.js

2011-10-09
1 add: 2 -> Number(1).$add_(2)  Same for Strings
Fixed precedence in MessageExpression.AsString
Operators ->, =, ~= compiled as names
new, class variable names as __new__, __class__
@ as operator with name
false, true as target, compiled as Boolean(false), Boolean(true)
Compile Object.st to javascript and run in node (no syntax error)

2011-10-13
Class Model for post
Post http://ajlopez.wordpress.com/2011/10/13/ajtalk-and-javascript-part-1-abstract-model/

2011-10-22
Generate Class instance for each defined class

2011-10-23
Primitive first implementation
Compile to use exports to expose classes in NodeJs
Compiling SqueakKernelObjects (WIP)
Primitive with name and module (WIP)

2011-10-29
Compile SqueakKernelObjects
Compile PharoCoreKernelObjects
Compile PharoCorePoint
Compile PharoCoreRectangle 
Use send(...) in Javascript

2011-10-30
Real numbers in Parser, ModelParser with tests
Unary - as message
Archive: old generated .js wo/send(..)
NodeJs ajtalk.js review (not in trunk, yet)
Real number in lexer, Parser, ModelParser, with tests
Processing instance variables from subclass:.. message with tests
Processing class variables from subclass:.. message with tests
AClass.classPrototype = AClassClass.prototype;
AClass.prototype.__class = AClassClass.prototype;
sendSuper invocation

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/
